--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,6 +85,10 @@
   }
   body {
     @apply bg-background text-foreground;
-    /* Removed font-family: Arial, Helvetica, sans-serif; to let Next/font handle it */
+    background-image: url('https://kstdcindia.travel.blog/wp-content/uploads/2019/06/what-are-the-benefits-of-karnataka-tourism-packages.jpg?w=1568');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
 }
