https://s7ap1.scene7.com/is/image/incredibleindia/2-vitthala-temple-complex-hampi-karnataka-city-hero?qlt=82&ts=1726761927494 change the background image into this image addres

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,7 +85,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('https://kstdcindia.travel.blog/wp-content/uploads/2019/06/what-are-the-benefits-of-karnataka-tourism-packages.jpg?w=1568');
+    background-image: url('https://s7ap1.scene7.com/is/image/incredibleindia/2-vitthala-temple-complex-hampi-karnataka-city-hero?qlt=82&ts=1726761927494');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
