--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,7 +85,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('https://s7ap1.scene7.com/is/image/incredibleindia/2-vitthala-temple-complex-hampi-karnataka-city-hero?qlt=82&ts=1726761927494');
+    background-image: url('https://images.herzindagi.info/webstories/7828/1676889448-cover.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
