https://www.tourism-of-india.com/blog/wp-content/uploads/2018/06/Bangalore-Palace-Karnataka.jpg add this image has a background image in the website

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,7 +85,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('https://images.herzindagi.info/webstories/7828/1676889448-cover.jpg');
+    background-image: url('https://www.tourism-of-india.com/blog/wp-content/uploads/2018/06/Bangalore-Palace-Karnataka.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
