--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,7 +85,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('https://i.pinimg.com/originals/7d/dc/bb/7ddcbb84586e93bac5baecb620a1fb33.jpg');
+    background-image: url('https://thumbs.dreamstime.com/b/vidhana-soudha-located-bangalore-seat-state-legislature-karnataka-karnataka-waving-flag-vidhana-soudha-171657083.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
