https://karnatakatourism.org/wp-content/uploads/2020/05/Maravante_Kundapura_Udupi-1.jpg replace this image in background

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,7 +85,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('https://thumbs.dreamstime.com/b/vidhana-soudha-located-bangalore-seat-state-legislature-karnataka-karnataka-waving-flag-vidhana-soudha-171657083.jpg');
+    background-image: url('https://karnatakatourism.org/wp-content/uploads/2020/05/Maravante_Kundapura_Udupi-1.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
