https://i.pinimg.com/736x/7d/dc/bb/7ddcbb84586e93bac5baecb620a1fb33.jpg replace this image has transparent image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('https://static2.tripoto.com/media/filter/tst/img/26369/TripDocument/1550565319_nature_37125440_1785102618237115_7948724703743442944_n.jpg');
+    background-image: url('https://i.pinimg.com/736x/7d/dc/bb/7ddcbb84586e93bac5baecb620a1fb33.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
