--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('https://i.pinimg.com/736x/7d/dc/bb/7ddcbb84586e93bac5baecb620a1fb33.jpg');
+    background-image: url('https://karnatakatourism.org/wp-content/uploads/2020/05/Om-Beach-3.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
