https://media.istockphoto.com/id/1399080444/vector/karnataka-map-with-its-flag-vector-illustration.jpg?s=612x612&w=0&k=20&c=oKTUWAbKXIHEzim3awB2HGtKR3ZX_1mJ6Qnyb9E7Oa8= replace this image as background image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('https://karnatakatourism.org/wp-content/uploads/2020/05/Om-Beach-3.jpg');
+    background-image: url('https://media.istockphoto.com/id/1399080444/vector/karnataka-map-with-its-flag-vector-illustration.jpg?s=612x612&w=0&k=20&c=oKTUWAbKXIHEzim3awB2HGtKR3ZX_1mJ6Qnyb9E7Oa8=');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
