replace and add this as background image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('https://www.shutterstock.com/image-vector/bangalore-skyline-historic-buildings-sketch-260nw-2402933137.jpg');
+    background-image: url('https://dynamic-media-cdn.tripadvisor.com/media/photo-o/03/4f/35/d6/bhuthanatha-temple.jpg?w=1200&h=700&s=1');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
