--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('https://www.mangaloretaxis.in/uploads/image/tourist-places/maravanthe.jpg');
+    background-image: url('https://media.istockphoto.com/id/1216722235/photo/mountain-with-green-grass-and-beautiful-sky.jpg?s=612x612&w=0&k=20&c=UD4Rmexxtkci9q-gH_PCUaBw6suwTCKp7SkZTXukQ2U=');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
